# carigali

./: .gitignore  Cargo.toml  README.md  recipes.sql
migrations/: 20250201161118_init.down.sql  20250201161118_init.up.sql  20250215122600_create_doc_info.down.sql  20250215122600_create_doc_info.up.sql
preprocessors/wikipedia/: .gitignore  Cargo.toml  README.md  package.json
preprocessors/wikipedia/server/: index.js
preprocessors/wikipedia/src/: main.rs
preprocessors/wikipedia/xtask/: Cargo.toml
preprocessors/wikipedia/xtask/src/: main.rs
src/: cli.rs  main.rs  parser.rs
