[package]
name = "carigali"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["preprocessors/wikipedia"]

[workspace.dependencies]
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.11"

[dependencies]
clap = { workspace = true }
indicatif = { workspace = true }
itertools = "0.14.0"
markdown = "1.0.0-alpha.22"
nom = "8.0.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["macros", "fs", "rt-multi-thread"] }
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
tokio-stream = "0.1.17"

# From hyperfine benchmarks,
# I found that generally:
# 1. lto="thin" > "off" >> "fat"
# 2. codegen_units: higher the better
# 3. opt-level: 2 > 1 > 3 > 0
[profile.release]
opt-level = 2
codegen-units = 256
lto = "thin"
