[package]
name = "wikipedia"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
indicatif = { workspace = true }
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
