[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
indicatif = { version = "0.17.9", features = ["rayon"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
subprocess = "0.2.9"
tokio = { version = "1.43.0", features = ["macros", "fs", "rt-multi-thread"] }
