[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
subprocess = "0.2.9"
